# F3re

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
libs/go-chat/: go.mod  go.sum
libs/go-chat/chat/: client.go  manager.go  room.go
libs/go-chat/message/: message.go
libs/go-chat/participant/: participant.go
libs/go-identity/: go.mod
libs/go-identity/store/: db.go
libs/go-identity/user/: user.go
libs/python-academic_data/src/academic_data/: __init__.py  models.py
libs/python-json_db_mapper/: pyproject.toml
libs/python-json_db_mapper/src/json_db_mapper/: to_json.py  utils.py
services/go-chat/: Dockerfile  go.mod
services/go-chat/api/: connection.go
services/go-chat/chat/: client.go  room.go
services/go-chat/message/: message.go
services/go-chat/participant/: participant.go
services/go-chat/user/: participant.go  user.go
services/go-identity/store/: db.go
services/python-academic/: pyproject.toml
services/python-academic/src/: __init__.py
services/python-academic/src/f3re/: __init__.py
services/python-academic/src/f3re/academic/: __init__.py
services/python-academic/src/f3re/academic/store/: __init__.py  db_mapper.py  json_mapper.py  utils.py
services/python-academic/src/model/: __init__.py  constants.py  contact.py
services/python-academic/src/store/: __init__.py  class_based_demo.py  db_mapper.py  demo.py  from_json.py  to_json.py  utils.py
services/python-academic_data/: pyproject.toml
services/python-academic_data/src/model/: contact.py
services/python-auth/: Dockerfile  pyproject.toml  requirements.txt
services/python-auth/src/: __init__.py
services/python-auth/src/f3re/auth/: main.py
services/python-auth/src/f3re/auth/user/: __init__.py
services/python-auth/src/user/: __init__.py  model.py
