[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json_db_mapper"
version = "0.1.0"
description = "A utility to map database objects to JSON, using academic_data models."
requires-python = ">=3.9"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[project.dependencies]
# This is how you declare a dependency on a local package in the same monorepo.
# The path is relative to this pyproject.toml file.
academic_data = { path = "../../academic-data-python", editable = true }
