[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f3re-academic-data"
version = "0.1.0"
authors = [
  { name="LithiumValproate", email="minaki@matsu.rip" },
]
description = "A library containing the core data models for the F3re project."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LithiumValproate/F3re"
"Bug Tracker" = "https://github.com/LithiumValproate/F3re/issues"

[tool.setuptools.packages.find]
where = ["src"]
