[tool.poetry]
name = "f3re-academic"
version = "0.1.0"
description = "A library containing the core data models for the F3re project."
authors = ["LithiumValproate <minaki@matsu.rip>"]
readme = "README.md"
homepage = "https://github.com/LithiumValproate/F3re"
repository = "https://github.com/LithiumValproate/F3re"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "model", from = "src" },
    { include = "store", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/LithiumValproate/F3re/issues"

[tool.poetry.dependencies]
python = ">=3.9"
mysql-connector-python = "^9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"