[project]
name = "f3re-academic"
version = "0.1.0"
description = "A library containing the core data models for the F3re project."
authors = [{ name = "LithiumValproate", email = "minaki@matsu.rip" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mysql-connector-python>=9.4.0,<10.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/LithiumValproate/F3re/issues"
Homepage = "https://github.com/LithiumValproate/F3re"
Repository = "https://github.com/LithiumValproate/F3re"

[[tool.poetry.packages]]
include = "f3re"
from = "src"

[[tool.poetry.include]]
path = "src/f3re/academic/static/*.csv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
