[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "academic_data"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A library containing the core data models for the Sophomore project."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/your-repo/sophomore"
"Bug Tracker" = "https://github.com/your-repo/sophomore/issues"

[tool.setuptools.packages.find]
where = ["src"]
