[project]
name = "f3re-auth"
version = "0.1.0"
description = "A library containing the core data models for the F3re project."
authors = [{ name = "LithiumValproate", email = "minaki@matsu.rip" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "SQLAlchemy==2.0.23",
    "bcrypt==4.1.2",
    "passlib==1.7.4",
]

[project.urls]
"Bug Tracker" = "https://github.com/LithiumValproate/F3re/issues"
Homepage = "https://github.com/LithiumValproate/F3re"
Repository = "https://github.com/LithiumValproate/F3re"

[[tool.poetry.packages]]
include = "f3re"
from = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
